--- a/.gitignore
+++ b/.gitignore
@@ -1,16 +1,25 @@
-# Node.js dependencies
+# build output
+dist/
+
+# generated types
+.astro/
+
+# dependencies
 node_modules/
 
-# Next.js build files
-.next/
+# logs
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
 
-# Editor directories and files
-.vscode/
-*.suo
-*.ntvs*
-*.njsproj
-*.sln
-*.sw?
+# environment variables
+.env
+.env.production
 
-# Mac OS files
+# macOS-specific files
 .DS_Store
+
+# jetbrains setting folder
+.idea/
+.vscode
