--- a/package.json
+++ b/package.json
@@ -10,7 +10,12 @@
   },
   "dependencies": {
     "@astrojs/tailwind": "^5.1.3",
+    "aos": "^2.3.4",
     "astro": "^5.0.4",
+    "devicon": "^2.16.0",
     "tailwindcss": "^3.4.16"
+  },
+  "devDependencies": {
+    "@types/aos": "^3.0.7"
   }
 }
