--- a/package.json
+++ b/package.json
@@ -9,16 +9,11 @@
     "astro": "astro"
   },
   "dependencies": {
-    "@astrojs/react": "^4.2.7",
-    "@astrojs/tailwind": "^6.0.2",
-    "@types/react": "^19.0.1",
-    "@types/react-dom": "^19.0.2",
+    "@tailwindcss/vite": "^4.1.11",
     "aos": "^2.3.4",
-    "astro": "^5.7.14",
+    "astro": "^5.12.3",
     "devicon": "^2.16.0",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "tailwindcss": "^3.4.16"
+    "tailwindcss": "^4.1.11"
   },
   "devDependencies": {
     "@types/aos": "^3.0.7"
